
CURRENT VERSION:

	Risk Game:	1.1.0.1
	 * Save:	7
	 * Network:	8

	CommandLine:	1.0.4.1
	Flash GUI:	1.0.3.5
	Increment1GUI:	1.1.1.1
	Simple GUI:	1.1.1.1
	Swing GUI:	1.0.6.4

1.1.0.2

	continents in map editor show color in list
        can double click on items in list
	German update - Oliver S.
	Map Store added for downloading new maps
	Donate switched from paypal to google

Risk 1.1.0.1

	in FlashGUI when u make a new game, it remembers your old player state
	bug with trading cards in CARD_INCREASING_SET fixed
	fix to trade button in FlashGUI Cards Dialog not being disabled

Risk 1.1.0.0 (02.06.2010)

	new build system to allow for building both Risk and Domination
	translation tool split off from main code
	pl language added
	italian card rules added
	3 dice to defend option added
	core Domination engine split from anything UI related in the hope to create a Risk for android
	in the map editor, if a new image is loaded with a different size to the imgmap, it asks if you want to update the size of the imgmap

Risk 1.0.9.8 (07.10.2008)

	no more licence in installer, as does not work in java 1.4
	In FixedCards gameMode some card trades were returning zero armies, for example {WILDCARD,WILDCARD,*}. - davet
	IT update - Orfeo Ciano
	DE update - Steffen Hornung
	better Hard AI - Cameron Macintosh
	Done - in lobby should use image factories so they dont have to keep reloading images in the GUI (RiskUtil.getUIImage)
	better applet errors in the map editor and message tool
	network update on different default maps

Risk 1.0.9.7 (06.05.2008)

	Game Name externalized
	fixed - closegame BattleDialog paintComponent hasArmiesInt NullPointerException
	improved - mid-game closegame problem when its not ur turn
	jsmooth exe installer works now
	fixed - installer gets version from build file
	help updated a bit with IDE info
	applets added to Help

Risk 1.0.9.6 (16.04.2008)

	gives error message when cant load a game
	cant highlight any country now when selecting capital