@@ -10,23 +10,7 @@
 
   <h1 align="center"><b>Credits</b></h1>
 
-  <p align="center"><b>Game Core/API:</b></p>
-
-  <p align="center">Yura Mamyrin</p>
-
-  <p align="center"><b>FlashGUI Code and Graphics:</b></p>
-
-  <p align="center">Yura Mamyrin</p>
-
-  <p align="center"><b>SwingGUI:</b></p>
-
-  <p align="center">Yura Mamyrin</p>
-
-  <p align="center"><b>SimpleGUI and Increment1GUI:</b></p>
-
-  <p align="center">Yura Mamyrin</p>
-
-  <p align="center"><b>Command Line Risk:</b></p>
+  <p align="center"><b>Game Core and GUI:</b></p>
 
   <p align="center">Yura Mamyrin</p>
 
@@ -74,11 +58,11 @@
 
   <p align="center"><b>Greetings:</b></p>
 
-  <p align="center">Walter, Sarah, Baris, Maria, Alyona, Rebecca, Nathan, John, Kate, Andy, Lyndsy, Chips, Jason, Owen, Luca, Mike, Jo, Laz, Rachel, Inga, Heather, Jak, Rob, Alex, Oksana, Rob, Babu, bob, Chris.</p>
+  <p align="center">Sasha, Walter, Sarah, Baris, Maria, Alyona, Rebecca, Nathan, John, Kate, Andy, Lyndsy, Chips, Jason, Owen, Luca, Mike, Jo, Laz, Rachel, Inga, Heather, Jak, Rob, Alex, Oksana, Rob, Babu, bob, Chris.</p>
 
   <p align="center">&nbsp;</p>
 
-  <p align="center">Copyright (c) 2003-2008 yura.net</p>
+  <p align="center">Copyright (c) 2003-2012 yura.net</p>
 
 </body>
 
